[project]
name = "comfyui_controlnet_aux"
description = "Plug-and-play ComfyUI node sets for making ControlNet hint images"
version = "1.0.6"
license = { file = "LICENSE" }
dependencies = [
  "comfyui",
  "importlib_metadata",
  "huggingface_hub",
  "scipy",
  "opencv-python-headless>=4.9.0.80",
  "filelock",
  "numpy",
  "Pillow",
  "einops",
  "torchvision",
  "pyyaml",
  "scikit-image",
  "python-dateutil",
  "mediapipe",
  "svglib",
  "fvcore",
  "yapf",
  "omegaconf",
  "ftfy",
  "addict",
  "yacs",
  "trimesh[easy]",
  "albumentations",
  "scikit-learn",
  "onnxruntime",
  "onnxruntime-gpu ;platform_system != 'Darwin'",
  "omegaconf",
  "torchmetrics",
  "fvcore",
  "iopath",
  "submitit",
  "matplotlib",
]

[project.urls]
Repository = "https://github.com/Fannovel16/comfyui_controlnet_aux"

[tool.comfy]
PublisherId = "fannovel16"
DisplayName = "comfyui_controlnet_aux"
Icon = ""

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/*"]

[project.entry-points."comfyui.custom_nodes"]
comfyui_controlnet_aux = "comfyui_controlnet_aux.nodes"

[project.entry-points."comfyui.custom_config"]
comfyui_controlnet_aux = "controlnet_aux_config.add_configuration:add_configuration"

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
